--- a/ch02/chitchat/templates/login.layout.html
+++ b/ch02/chitchat/templates/login.layout.html
@@ -18,7 +18,7 @@
       
     </div> <!-- /container -->
     
-    <script src="/static/js/jquery-2.1.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
   </body>
 </html>
